namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linksort
  labels:
    app: linksorting
